--- a/src/widgets/components/header/styles/Header.styled.scss
+++ b/src/widgets/components/header/styles/Header.styled.scss
@@ -7,3 +7,13 @@
         justify-content: space-between;
     }
 }
+
+.close {
+    display: none;
+    position: relative;
+    z-index: 2;
+
+    @media screen and (max-width: 768px) {
+        display: block;
+    }
+}
