--- a/src/widgets/components/nav/styles/Nav.styled.scss
+++ b/src/widgets/components/nav/styles/Nav.styled.scss
@@ -3,6 +3,7 @@
 .nav {
     ul {
         display: flex;
+        align-items: center;
         gap: 30px;
 
         li {
@@ -16,6 +17,36 @@
 
                 &:hover {
                     color: $darkgreen;
+                }
+            }
+        }
+    }
+}
+
+@media screen and (max-width: 768px) {
+    .nav {
+        top: 0;
+        position: absolute;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        text-align: center;
+        left: 0;
+        background-color: white;
+
+        ul {
+            flex-direction: column;
+            gap: 15px;
+
+            li {
+                a {
+                    color: $darkgreen;
+
+                    &:hover{
+                        color: $darkgreen;
+                    }
                 }
             }
         }
