--- a/src/widgets/components/right-nav/styles/rightNav.styled.scss
+++ b/src/widgets/components/right-nav/styles/rightNav.styled.scss
@@ -2,4 +2,11 @@
     display: flex;
     align-items: center;
     gap: 20px;
+
+    @media screen and (max-width: 768px) {
+        gap: 5px;
+        svg {
+            padding: 0;
+        }
+    }
 }
