--- a/src/shared/components/Button/styles/Button.styled.scss
+++ b/src/shared/components/Button/styles/Button.styled.scss
@@ -6,6 +6,8 @@
     line-height: 25px;
     letter-spacing: 0%;
     transition: .2s ease;
+    cursor: pointer;
+    border: none;
 
     &:hover {
         background-color: black;
