--- a/src/widgets/components/header/styles/Header.styled.scss
+++ b/src/widgets/components/header/styles/Header.styled.scss
@@ -1,5 +1,9 @@
 .header {
     padding-top: 20px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    background-color: white;
 
     .wrapper {
         display: flex;
@@ -11,7 +15,7 @@
 .close {
     display: none;
     position: relative;
-    z-index: 2;
+    z-index: 3;
 
     @media screen and (max-width: 768px) {
         display: block;
