--- a/src/widgets/components/nav/styles/Nav.styled.scss
+++ b/src/widgets/components/nav/styles/Nav.styled.scss
@@ -35,6 +35,7 @@
         text-align: center;
         left: 0;
         background-color: white;
+        z-index: 2;
 
         ul {
             flex-direction: column;
