--- a/src/widgets/components/header/styles/Header.styled.scss
+++ b/src/widgets/components/header/styles/Header.styled.scss
@@ -16,6 +16,8 @@
     display: none;
     position: relative;
     z-index: 3;
+    border: none;
+    background: none;
 
     @media screen and (max-width: 768px) {
         display: block;
