--- a/src/widgets/components/header/styles/Header.styled.scss
+++ b/src/widgets/components/header/styles/Header.styled.scss
@@ -3,7 +3,8 @@
     position: fixed;
     left: 0;
     right: 0;
-    background-color: white;
+    background-color: #FCFBFF;
+    z-index: 1;
 
     .wrapper {
         display: flex;
